--- a/README
+++ b/README
@@ -18,6 +18,14 @@ Ported to Chiron, Narwhal, Node by Kris Kowal.
   <http://github.com/kriskowal/mimeparse>
 
 
+Installation
+============
+
+    Install <http://github.com/isaacs/npm>
+
+    npm install mimeparse
+
+
 The API
 =======
 
